--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
     "format": "prettier --write \"src/**/*.ts\"",
     "clean": "rm -rf dist"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "gemini",
+    "ai",
+    "poc"
+  ],
+  "author": {
+    "name": "Andrey Kuznetsov",
+    "email": "tormozz48@gmail.com"
+  },
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.15.2",
@@ -25,5 +32,11 @@
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "@google/genai": "^0.10.0",
+    "dotenv": "^16.5.0",
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0"
   }
 }
